@@ -1,8 +1,6 @@
-AUX goattracker-2.71-makefiles.patch 2277 RMD160 4c7a01f7961a6dcb2c6dbed946a4c806163b0cf3 SHA1 83b98201703608f490effa4a69807d7de9e190f6 SHA256 87177a9e5e2f54323bb89636f3a9f6894a47a73324bb721e0d265837f36d048b
-AUX goattrk2.xpm 1585 RMD160 0d9014aab08202090c78a4e06a978e8250fb5d19 SHA1 cf1a28bebbcb40c8476215bfd0489fdb9cb55892 SHA256 b1dbc7f99c39915c514981f6ac6e4e0a56209019622071af5dab28cdfa0668cc
-DIST GoatTracker_2.71.zip 896805 RMD160 3b410876c58010e4dee2dc5e9d48cdee2c5e30b8 SHA1 e46df1da44093cbc268e2be2ff1151ef321c5be0 SHA256 fed834b25f22af22fb3f1a93f25822637e11fc4e66223435991ca4c3363b18d2
-DIST GoatTracker_2.72.zip 905191 RMD160 ec87f2d0ff84f53faecbc5aee39a43951578eaae SHA1 e66f6aee7fe9c1def284b927ea3309452311b937 SHA256 0c05ea09c8af372e631ca0cd9cdfc5ddd6a0784712cc679f546413e3b2f8e194
-EBUILD goattracker-2.71.ebuild 1202 RMD160 4a0532ed49a9ca810a4185cd6bd1eaf09404efa6 SHA1 99730955507c70a4cb5e515e05a4b5f217d688f9 SHA256 00e1d1500fa9b5711f19aaa73be5a07cde4a72904f2968d73c12b52b4436e508
-EBUILD goattracker-2.72.ebuild 1367 RMD160 e913ae085b10ff62d251b672504e33b657615ebb SHA1 fb131eed1da914f6603b283e6842a7ce4f863ea0 SHA256 be4bc9b37fb824f47fa383fa893ab569f169f80d2693a81128cf062759513145
-MISC ChangeLog 838 RMD160 9d94e452fae8ea2f2475b7ea5334543d2236c8d6 SHA1 552855bbac0b21b205299d9a2584e7c7f1bdec76 SHA256 5f6e590bd68e106bb8fcd995a68eaa053ef59227c3c8de2af79de2f9bb8c4c2f
-MISC metadata.xml 246 RMD160 cdd725771833663c8cfa684c4c71e57d86d9993d SHA1 973be5799e631fd26fb4abcfc8da942f2f759d06 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f
+AUX goattracker-2.71-makefiles.patch 2277 SHA256 87177a9e5e2f54323bb89636f3a9f6894a47a73324bb721e0d265837f36d048b SHA512 5c9381e6fc2d7253df8c6fd6a2c3e09291461a1ec532068b32719573fa2f91875a826ce80b34a2ae80276b137f663e0ed81d265ce1626b7aaeb14ca6178a13d4 WHIRLPOOL 5125e12264a595b2d61465b9151ed4b001b6979685b699afe7a879df9b2f139193e28c0d0c68acea1b2627eb73761b2e8d49447ecba6c2cfe20f521ab0f8797f
+AUX goattrk2.xpm 1585 SHA256 b1dbc7f99c39915c514981f6ac6e4e0a56209019622071af5dab28cdfa0668cc SHA512 a5df948d1590ceea6ebfcf05006bb23f4bc618e52d6317df7c03e9cf3322fa61a83f879b891916f7d531f87916096aaf60755366dbf0754e7f038631339252dc WHIRLPOOL 09fa6b516906001d9d19a1752d3d230b967cd4d1a824ceaeff94de0c6b707a2f7e071642ad9fb8f09cc51bfd8e9808e9ff73e923f7b468286c9bd09ceac0c634
+DIST GoatTracker_2.72.zip 905191 SHA256 0c05ea09c8af372e631ca0cd9cdfc5ddd6a0784712cc679f546413e3b2f8e194 SHA512 208360131f7627d26b5f7e9fd31a333773136de0f299aae8b29a874461a92702564abaae70e531fd801d8a072c36292afd5f3f5c7e1ef995fa00f43449684d16 WHIRLPOOL e3a2edf934a218ff437169f585e5c30ba4f0658bd0d171a57fcd686162ebd26305b31dbf4f461614bdea5ba0c8c3b67a7c4ee96c27859e9c5e5ea06b3a5e302d
+EBUILD goattracker-2.72.ebuild 1387 SHA256 40c425818755541c68a503e4052a94284070b4b579d5c0d726c756893130f27f SHA512 926c87a0f98afad8e18a83ea722d8104e35ca0b146613235afdcddcd0139d1133b9b257d94aca4ce0ee78062a14a9f70b9e497de3a59b787c64916da8cd997a8 WHIRLPOOL 9d03b2a0cf1068b2e695833c5e9f781443dae5645831c2b613b11febe9a147b96be6dbb1a7d453f3dacc0841841b966af8c9d3680faaafe98313adbc98814c03
+MISC ChangeLog 1040 SHA256 7f8f4573572d6c934906dd459704676ed948971322f1ccfe25a5ded5f25cdde8 SHA512 e88836aa6efd9f6936d0b6611d403d44291314060097dc6055a19ed1f347a994c1c7ef71427854909dea949bc6b3f2670c48eb90fa9087fa3c9965cc8764752c WHIRLPOOL 1329161fa4f94089bffa3b0178638d222297a66b7e2660b48199fc46cd52b63df3f974205ab68fd22b387ced1e34e792c7a4c5d7345e41a53be3f0d46b23a1db
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
