@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/goattracker
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 May 2014; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
+  goattracker-2.71.ebuild, goattracker-2.72.ebuild:
+  rename libsdl USE dep audio -> sound. add virtual/pkgconfig and fix DEPEND
+  typo
 
 *goattracker-2.72 (23 Jan 2012)
 
